fix: desugaring + List.of crash + error dialog for debugging